# dtstruct

./: LICENSE.md  README.md  pyproject.toml  setup.py
dtstruct/: _version.py  linkedlists.py  stacks.py
dtstruct.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dtstruct/tests/: linkedlists.py  test_linkedlists.py  test_stacks.py
