[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=7",
    "tomli>=1.0.0; python_version >= '3.11'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dtstruct/_version.py"
write_to_template = "__version__ = '{version}'\n"

[tool.setuptools]
include-package-data = true
packages = {find = {exclude=["tests*", "scripts*", "docs*", "notebooks*"]}}
package-dir = {dtstruct = "dtstruct"}

# [project.urls]
# home = "https://github.com/ArgonneCPAC/diffhalos"

[project]
name = "dtstruct"
authors = [
    {name = "Georgios Zacharegkas", email = "gzacharegkas@gmail.com"},
]
description = "Library for studying data structures."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Operating System :: UNIX",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E226", "E231", "E501", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]
max-line-length = 88
count = true
